# Flight_Task_Planner

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
src/: main.cpp
src/struct/: FlightTask.h
ui/: Main.qml
